syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesplatform.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";

import "data_entry.proto";
import "google/protobuf/wrappers.proto";
import "atomic_badge.proto";

message CreateContractTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  string image = 3;
  string image_hash = 4;
  string contract_name = 5;
  repeated DataEntry params = 6;
  int64 fee = 7;
  int64 timestamp = 8;
  google.protobuf.BytesValue fee_asset_id = 9;
  AtomicBadge atomic_badge = 10;
  repeated bytes proofs = 11;
}